Added basic checkstyle to CI and RF of TestUtils (#1641)
* [+] checkstyle simple to CI